Open modules that mockito needs for mock serialization
```
...
Caused by: java.lang.RuntimeException: Failed to serialize org.jenkinsci.plugins.proccleaner.PreBuildCleanup#cleaner for class org.jenkinsci.plugins.proccleaner.PreBuildCleanup
  at hudson.util.RobustReflectionConverter$2.writeField(RobustReflectionConverter.java:274)
  at hudson.util.RobustReflectionConverter$2.visit(RobustReflectionConverter.java:241)
  at com.thoughtworks.xstream.converters.reflection.PureJavaReflectionProvider.visitSerializableFields(PureJavaReflectionProvider.java:174)
  at hudson.util.RobustReflectionConverter.doMarshal(RobustReflectionConverter.java:226)
  at hudson.util.RobustReflectionConverter.marshal(RobustReflectionConverter.java:163)
  at com.thoughtworks.xstream.core.AbstractReferenceMarshaller.convert(AbstractReferenceMarshaller.java:68)
  at com.thoughtworks.xstream.core.TreeMarshaller.convertAnother(TreeMarshaller.java:59)
  at com.thoughtworks.xstream.core.TreeMarshaller.convertAnother(TreeMarshaller.java:44)
  at com.thoughtworks.xstream.core.AbstractReferenceMarshaller$1.convertAnother(AbstractReferenceMarshaller.java:87)
  at com.thoughtworks.xstream.converters.collections.AbstractCollectionConverter.writeBareItem(AbstractCollectionConverter.java:94)
  at com.thoughtworks.xstream.converters.collections.AbstractCollectionConverter.writeItem(AbstractCollectionConverter.java:66)
  at hudson.util.DescribableList$ConverterImpl.marshal(DescribableList.java:274)
  at com.thoughtworks.xstream.core.AbstractReferenceMarshaller.convert(AbstractReferenceMarshaller.java:68)
  at com.thoughtworks.xstream.core.TreeMarshaller.convertAnother(TreeMarshaller.java:59)
  at com.thoughtworks.xstream.core.AbstractReferenceMarshaller$1.convertAnother(AbstractReferenceMarshaller.java:83)
  at hudson.util.RobustReflectionConverter.marshallField(RobustReflectionConverter.java:283)
  at hudson.util.RobustReflectionConverter$2.writeField(RobustReflectionConverter.java:270)
  ... 36 more
Caused b